--- a/第十章--对象/16深拷贝多层次分析.html
+++ b/第十章--对象/16深拷贝多层次分析.html
@@ -22,8 +22,8 @@
     )
     hd.name = 'Mary'
     hd.user.name = 'Eva'
-    console.log(JSON.stringify(hd, null, 2))
-    console.log(JSON.stringify(obj, null, 2))
+    console.log('hd', JSON.stringify(hd, null, 2))
+    console.log('obj', JSON.stringify(obj, null, 2))
     console.log('-------使用递归算法进行深拷贝------')
     let data = {
       name: 'ava',
