--- a/Traversy Media/New String & Number Methods.html
+++ b/Traversy Media/New String & Number Methods.html
@@ -15,11 +15,11 @@
       console.log(s.includes('am Ava'))
 
       //Hex(十六进制)
-      console.log('f=15,15*16+15=255', 0xff)
+      console.log('Hex(十六进制)---f=15,15*16+15=255', 0xff)
       //Binary(二进制)
-      console.log(0b11)
+      console.log('Binary(二进制)----', 0b11)
       //Octal(8进制)
-      console.log('5*8*8+4*8+3', 0o543)
+      console.log('Octal(8进制)--5*8*8+4*8+3', 0o543)
       console.log(
         '如果传递的值是有限数字，则返回true。 布尔值，字符串，对象，数组等所有其他内容均返回false：',
         Number.isFinite(2 / 3),
