--- a/sbd code理解/深拷贝对象里面有Array(done).html
+++ b/sbd code理解/深拷贝对象里面有Array(done).html
@@ -14,7 +14,7 @@
         name: 'ava',
         url: 'www.baidu.com',
         user: { name: 'rst' },
-        team: ['Ava', 'RST', 'Coding'],
+        team: ['Ava', 'RST', 'Coding', [1, 2, 3]],
       }
       function copy(object) {
         let res = {}
