--- a/Traversy Media/ES6/ [10] Promises.html
+++ b/Traversy Media/ES6/ [10] Promises.html
@@ -6,5 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[10] Promises</title>
   </head>
-  <body></body>
+  <body>
+    <div id="my"></div>
+    <script>
+      'use strict'
+      //Immediately resolve(设置一个promise)
+      console.log('设置一个promise')
+      let myPromise = Promise.resolve('foo')
+      console.log('获得一个promise')
+      myPromise.then((res) => console.log(res))
+
+      let myPromise2 = new Promise(function (resolve, reject) {
+        setTimeout(() => resolve(4), 2000)
+      })
+      myPromise2.then((res) => {
+        res += 3
+        console.log(res)
+      })
+      function getData(method, url) {
+        return new Promise(function (resolve, reject) {
+          var xhr = new XMLHttpRequest()
+          xhr.open(method, url)
+          xhr.onload = function () {
+            if (this.status >= 200 && this.status < 300) {
+              console.log('this.status>=200说明ok')
+              resolve(xhr.response)
+            } else {
+              reject({
+                status: this.status,
+                statusText: xhr.statusText,
+              })
+            }
+          }
+          xhr.onerror = function () {
+            reject({
+              status: this.status,
+              statusText: xhr.statusText,
+            })
+          }
+          xhr.send()
+        })
+      }
+      getData('GET', 'https://jsonplaceholder.typicode.com/todos')
+        .then((data) => {
+          let todos = JSON.parse(data)
+          console.log(
+            '🚀 ~ file:  [10] Promises.html ~ line 53 ~ .then ~ todos',
+            todos,
+          )
+          let output = ''
+          for (let todo of todos) {
+            output += `<div>${todo.title}</div>`
+          }
+          console.log('output', output)
+          document.getElementById('my').innerHTML = output
+        })
+        .catch((error) => {
+          console.log(error)
+        })
+    </script>
+  </body>
 </html>
