--- a/Traversy Media/AJAX Crash Course (Vanilla JavaScript)/ajex4.html
+++ b/Traversy Media/AJAX Crash Course (Vanilla JavaScript)/ajex4.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <button id="button">GET Name</button>
+    <h1>GET php FORM</h1>
     <form action="process.php" method="GET">
+      <input type="text" name="name" />
+      <input type="submit" value="Submit" />
+    </form>
+    <h1>POST php FORM</h1>
+    <form action="process.php" method="POST">
       <input type="text" name="name" />
       <input type="submit" value="Submit" />
     </form>
@@ -19,6 +25,7 @@
       let xhr = new XMLHttpRequest()
       xhr.open('GET', 'process.php?name=ava', true)
       xhr.onload = function () {
+        console.log(this.status)
         console.log(this.responseText)
       }
       xhr.send()
