--- a/Traversy Media/Build a Music Player/index.html
+++ b/Traversy Media/Build a Music Player/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Music Player</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Music Player</h1>
+    <div class="music-container">
+      <div class="music-info">
+        <h4 class="title">Reverse</h4>
+        <div class="progress-container">
+          <div class="progress"></div>
+        </div>
+      </div>
+      <audio src="music/Reverse.mp3" id="audio"></audio>
+      <div class="img-conatiner">
+        <img src="image/Desktop.jpeg" alt="music-cover" id="cover" />
+      </div>
+      <div class="navigation">
+        <button class="action-btn" id="prev">
+          <i class="fas fa-backward"></i>
+        </button>
+        <button class="action-btn action-btn-big" id="play">
+          <i class="fas fa-play"></i>
+        </button>
+        <button class="action-btn" id="next">
+          <i class="fas fa-forward"></i>
+        </button>
+      </div>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
