--- a/Traversy Media/Build a Music Player/index.html
+++ b/Traversy Media/Build a Music Player/index.html
@@ -11,20 +11,21 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Music Player</title>
   </head>
   <body>
     <h1>Music Player</h1>
-    <div class="music-container">
+    <div class="music-container play">
       <div class="music-info">
-        <h4 class="title">Reverse</h4>
+        <h4 class="title"></h4>
         <div class="progress-container">
           <div class="progress"></div>
         </div>
       </div>
-      <audio src="music/Reverse.mp3" id="audio"></audio>
+      <audio id="audio"></audio>
       <div class="img-conatiner">
-        <img src="image/Desktop.jpeg" alt="music-cover" id="cover" />
+        <img alt="music-cover" id="cover" />
       </div>
       <div class="navigation">
         <button class="action-btn" id="prev">
