--- a/Traversy Media/Build a Music Player/index.html
+++ b/Traversy Media/Build a Music Player/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1>Music Player</h1>
-    <div class="music-container play">
+    <div class="music-container">
       <div class="music-info">
         <h4 class="title"></h4>
         <div class="progress-container">
