--- a/Traversy Media/Build a Music Player/index.html
+++ b/Traversy Media/Build a Music Player/index.html
@@ -18,7 +18,7 @@
     <h1>Music Player</h1>
     <div class="music-container">
       <div class="music-info">
-        <h4 class="title"></h4>
+        <h4 class="title" id="title"></h4>
         <div class="progress-container">
           <div class="progress"></div>
         </div>
