--- a/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 4 - Live User Filter.html
+++ b/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 4 - Live User Filter.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 4 - Live User Filter</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <div>Live User Filter</div>
+        <small>Search by name/location</small>
+        <input id="searchInput" />
+      </header>
+    </div>
+  </body>
 </html>
