--- a/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 4 - Live User Filter.html
+++ b/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 4 - Live User Filter.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 4 - Live User Filter</title>
+    <link rel="stylesheet" href="Project 4 - Live User Filter.css" />
   </head>
   <body>
     <div class="container">
       <header class="header">
         <div>Live User Filter</div>
         <small>Search by name/location</small>
-        <input id="searchInput" />
+        <input id="searchInput" class="search-input" />
       </header>
+      <ul id="result" class="user-list">
+        <!-- <li>
+          <img src="https://randomuser.me/api/portraits/women/43.jpg" />
+          <div class="user-info">
+            <div class="username">Nana</div>
+            <div class="location">location</div>
+          </div>
+        </li> -->
+        <div><h3>Loading...</h3></div>
+      </ul>
     </div>
   </body>
+  <script src="Project 4 - Live User Filter.js"></script>
 </html>
