--- a/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 5 - Content Placeholder.html
+++ b/Traversy Media/Build 5 Projects With HTML, CSS & JavaScript/Project 5 - Content Placeholder.html
@@ -4,35 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Project 5 - Content Placeholder.css" />
     <title>Project 5 - Content Placeholder</title>
   </head>
   <body>
-    <div class="card"></div>
-    <div class="card-header animated-bg" id="header">
-      <img
-        src="/Users/sruan006/Desktop/ava/AvaLearnFrontEnd/image/bonVoyage.jpg"
-      />
-    </div>
-    <div class="card-contain">
-      <h3 class="card-title animated-bg animated-bg-text" id="title">
-        Lorem ipsum
-      </h3>
-      <p class="card-excerpt" id="excerpt">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam,
-        delectus!
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-        <span class="animated-bg animated-bg-text">&nbsp;</span>
-      </p>
-      <div class="author">
-        <div class="profile-img animated-bg" id="profile_img">
-          <img src="https://randomuser.me/api/portraits/men/61.jpg" />
-        </div>
-        <div class="author-info">
-          <strong class="animated-bg animated-bg-text">John</strong>
-          <small class="animated-bg animated-bg-text">2022.05.13</small>
+    <div class="card">
+      <div class="card-header animated-bg" id="header">
+        &nbsp;
+      </div>
+      <div class="card-contain">
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
+        </h3>
+        <p class="card-excerpt" id="excerpt">
+          &nbsp;
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+        </p>
+        <div class="author">
+          <div class="profile-img animated-bg" id="profile_img">
+            &nbsp;
+          </div>
+          <div class="author-info">
+            <strong class="animated-bg animated-bg-text" id="profile_name">
+              &nbsp;
+            </strong>
+            <small class="animated-bg animated-bg-text" id="profile_date">
+              &nbsp;
+            </small>
+          </div>
         </div>
       </div>
     </div>
   </body>
+  <script src="Project 5 - Content Placeholder.js"></script>
 </html>
