--- a/Traversy Media/Axios Crash Course | HTTP Library/index.html
+++ b/Traversy Media/Axios Crash Course | HTTP Library/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <button onclick="getData()">get</button>
+    <button onclick="postData()">Post</button>
+    <button onclick="updateDataByPut()">updateData</button>
+    <button onclick="updateDataByPatch()">updateDataByPatch</button>
+    <button onclick="removeData()">removeData</button>
+    <button onclick="simGetData()">Simultaneous Request</button>
+    <button onclick="transformResponse()">transformResponse</button>
+    <button onclick="errorHandle()">errorHandle</button>
+    <button onclick="cancelToken()">cancelToken</button>
   </body>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
