--- a/JS/.?的用法.html
+++ b/JS/.?的用法.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>
-      js中.?、??、??=的用法和含义
+      js中?.、??、??=的用法和含义
     </title>
   </head>
   <body>
@@ -44,7 +44,7 @@
       let b
       let a = 0
       let c = { name: 'buzhimingqianduan' }
-
+      console.log('-----空值合并运算符(??)----')
       b = a ?? c
       console.log(b)
       console.log('========空值赋值运算符(??=)=======')
