--- a/JS/.?的用法.html
+++ b/JS/.?的用法.html
@@ -8,7 +8,7 @@
   <body>
     <pre>
      一：
-     .?这个东西,其实这个就叫做可选链,表达的意思,就和刚才if else的例子是一个意思,,只有当a存在,同时a具有name属性的时候,才会把值赋给b,否则就会将undefined赋值给b.重要的是,不管a存在与否,这么做都不会报错.
+     ?.这个东西,其实这个就叫做可选链,表达的意思,就和刚才if else的例子是一个意思,,只有当a存在,同时a具有name属性的时候,才会把值赋给b,否则就会将undefined赋值给b.重要的是,不管a存在与否,这么做都不会报错.
       let a;
       let b;
       if(!!a){
