--- a/第十一章 JS的原型和继承包你学会/原型的初步认识.html
+++ b/第十一章 JS的原型和继承包你学会/原型的初步认识.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>原型的初步认识</div>
-    <pre></pre>
+    <pre>笔记:https://szxio.gitee.io/hexoblog/JavaScript/Prototypeof/</pre>
     <script>
       let hd = {}
       console.log(Object.getPrototypeOf(hd))
