--- a/第十五章 你应该学习的 JS 异步编程与Promise/6 Promise微任务处理机制.html
+++ b/第十五章 你应该学习的 JS 异步编程与Promise/6 Promise微任务处理机制.html
@@ -15,6 +15,7 @@
       new Promise((resolve, reject) => {
         // resolve('成功状态')
         reject('拒绝')
+        //状态只能改变一次，执行完resolve('成功状态') 之后就不会执行   reject('拒绝')
       })
         .then(
           (value) => console.log('value1', value),
