--- a/第十五章 你应该学习的 JS 异步编程与Promise/8 宏任务的提升原来是误解.html
+++ b/第十五章 你应该学习的 JS 异步编程与Promise/8 宏任务的提升原来是误解.html
@@ -29,7 +29,7 @@
         resolve('will create .then')
         console.log('this is setTimeout')
       }, 0)
-      /*必须要执行完setTimeout这个宏任务之后，才能执行resolve*/
+      /*必须要执行完setTimeout这个宏任务之后，才能执行resolve(才能创建微任务)*/
       console.log('promise同步')
     }).then((res) => {
       console.log(res)
