--- a/第十五章 你应该学习的 JS 异步编程与Promise/16 自定义错误处理.html
+++ b/第十五章 你应该学习的 JS 异步编程与Promise/16 自定义错误处理.html
@@ -9,12 +9,12 @@
   <body>
     <script src="ajax 16 自定义错误处理.js"></script>
     <script>
-      let url = 'h=ttp://localhost:4000/user/playlist?uid=32953014'
+      let url = 'htt2p://localhost:4000/user/playlist?uid=32953014'
       ajax(url)
         .then((res) => {
           console.log('res=', res)
         })
-        .catch((err) => console.log('err', err))
+        .catch((err) => console.log('catch err=', err))
     </script>
   </body>
 </html>
