--- a/第十五章 你应该学习的 JS 异步编程与Promise/14 使用Promise封装AJAX异步请求.html
+++ b/第十五章 你应该学习的 JS 异步编程与Promise/14 使用Promise封装AJAX异步请求.html
@@ -17,7 +17,7 @@
           `http://localhost:4000/playlist/detail?id=${res.playlist[0].id}`,
         ).then((res2) => console.log(res2))
       },
-      (reason) => console.log('reason', reason),
+      (reason) => console.log('reason=', reason),
     )
   </script>
 </html>
