--- a/CSS/CSS浮动布局/3左右浮动应用场景与盒边界.html
+++ b/CSS/CSS浮动布局/3左右浮动应用场景与盒边界.html
@@ -31,9 +31,10 @@
   <body>
     <main>
       <div>
-        main 这条线没有高度
+        div 这条线没有高度
         是因为float之后这个元素缺失了，不占空间了，父级元素没有办法感知到它的高度
       </div>
+      <div></div>
       <div></div>
     </main>
   </body>
