--- a/Traversy Media/5 HTML, CSS & JS Mini Projects - Scroll Animation, Rotating Navigation, Drag Events, etc/Rotating Navigation/Rotating Navigation.html
+++ b/Traversy Media/5 HTML, CSS & JS Mini Projects - Scroll Animation, Rotating Navigation, Drag Events, etc/Rotating Navigation/Rotating Navigation.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Rotating Navigation.css" />
     <title>Rotating Navigation</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container show_nav">
       <div class="circle_container">
         <div class="circle">
           <button id="open">
@@ -131,4 +132,5 @@
       </nav>
     </div>
   </body>
+  <script src="Rotating Navigation.js"></script>
 </html>
