--- a/Traversy Media/CSS3 Animation & Transitions Crash Course/transition.html
+++ b/Traversy Media/CSS3 Animation & Transitions Crash Course/transition.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="keyframe.css" />
-    <title>keyframe</title>
+    <link rel="stylesheet" href="transition.css" />
+    <title>CSS transition</title>
   </head>
   <body>
     <div class="box"></div>
