--- a/Traversy Media/Build a Responsive Website | HTML, CSS Grid, Flexbox & More/index.html
+++ b/Traversy Media/Build a Responsive Website | HTML, CSS Grid, Flexbox & More/index.html
@@ -11,12 +11,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Build a Responsive Website | HTML, CSS Grid, Flexbox & More</title>
   </head>
   <body>
     <!-- nav bar -->
-    <div class="nav_bar">
+    <div class="nav-bar">
       <div class="container flex">
         <h1 class="logo">Lorem</h1>
         <nav>
@@ -31,21 +33,21 @@
     <!-- showcase -->
     <section class="showcase">
       <div class="container grid">
-        <div class="showcase_text">
+        <div class="showcase-text">
           <h1>Easier Deployment</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab corrupti
             tenetur culpa ex vitae rem fugit, quisquam officiis. Nisi, voluptas?
           </p>
-          <a href="feature.html">Read More</a>
+          <a href="feature.html" class="btn btn-outline">Read More</a>
         </div>
-        <div class="showcase_form card">
+        <div class="showcase-form card">
           <h2>Request a Demo</h2>
           <form action="">
-            <div class="form_control">
+            <div class="form-control">
               <input type="text" name="name" placeholder="Name" required />
             </div>
-            <div class="form_control">
+            <div class="form-control">
               <input
                 type="text"
                 name="company name"
@@ -53,13 +55,132 @@
                 required
               />
             </div>
-            <div class="form_control">
+            <div class="form-control">
               <input type="email" name="email" placeholder="Email" required />
             </div>
-            <input type="submit" value="Send" />
+            <input type="submit" value="Send" class="btn" />
           </form>
         </div>
       </div>
     </section>
+    <!-- stat -->
+    <section class="stats">
+      <div class="container">
+        <h3 class="stats-heading text-center">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium,
+          ad! Veniam ea corporis corrupti eligendi!
+        </h3>
+        <div class="grid grid-3 text-center my-4">
+          <div>
+            <i class="fas fa-server fa-3x"></i>
+            <h3>
+              10,345,232
+            </h3>
+            <p class="text-secondary">
+              Deployment
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-upload fa-3x"></i>
+            <h3>
+              30,845,222
+            </h3>
+            <p class="text-secondary">
+              Publishment
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-project-diagram fa-3x"></i>
+            <h3>
+              10,345
+            </h3>
+            <p class="text-secondary">
+              Projects
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- CLI -->
+    <section class="cli">
+      <div class="container grid">
+        <img src="image/YouNuanChi.png" alt="" />
+        <div class="card">
+          <h3>
+            Lorem ipsum dolor sit amet consectetur.
+          </h3>
+        </div>
+        <div class="card">
+          <h3>
+            Lorem, ipsum dolor.
+          </h3>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+      <div class="container grid">
+        <div class="text-center">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p class="lead my-1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+            maxime!
+          </p>
+          <a href="features.html" class="btn btn-dark">Read More</a>
+        </div>
+        <img src="image/public-cloud-icon.png" alt="" />
+      </div>
+    </section>
+    <!-- Languages -->
+    <section class="languages">
+      <h2 class="md text-center my-2">Lorem, ipsum.</h2>
+      <div class="container flex">
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="image/download.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="grid-3 container grid">
+        <div>Lorem</div>
+        <p>Copyright &copy; 2023</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="docs.html">Docs</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#"><i class="fab fa-git fa-2x"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
